ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Availability_Inventory__c/Availability_Inventory__c.object-meta.xml
<CustomObject>
    <label>Availability_Inventory</label>
    <nameField>
        <displayFormat>AI-{000000}</displayFormat>
        <label>Availability_Inventory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Availability_Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>