ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Availability_Inventory__c/fields/Catalog_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Item_Number__c</fullName>
    <label>Catalog Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>