ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Availability_Inventory__c/fields/Conversion_Factor__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Factor__c</fullName>
    <label>Conversion Factor</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>