ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Availability_Inventory__c/fields/isAvailable__c.field-meta.xml
<CustomField>
    <fullName>isAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAvailable</label>
    <type>Checkbox</type>
</CustomField>