ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Availability_Inventory__c/fields/Max_Lead_Date__c.field-meta.xml
<CustomField>
    <fullName>Max_Lead_Date__c</fullName>
    <label>Max Lead Date</label>
    <type>Date</type>
</CustomField>