ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Availability_Inventory__c/fields/New_SKU__c.field-meta.xml
<CustomField>
    <fullName>New_SKU__c</fullName>
    <label>New SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>