ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Availability_Inventory__c/fields/Next_Available_Amount__c.field-meta.xml
<CustomField>
    <fullName>Next_Available_Amount__c</fullName>
    <label>Next Available Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>