ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Availability_Inventory__c/fields/Next_Available_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Available_Date__c</fullName>
    <label>Next Available Date</label>
    <type>Date</type>
</CustomField>