ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Availability_Inventory__c/fields/Old_SKU__c.field-meta.xml
<CustomField>
    <fullName>Old_SKU__c</fullName>
    <label>Old SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>