ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Availability_Inventory__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Availability_Inventory__c</referenceTo>
    <relationshipLabel>Availability_Inventory</relationshipLabel>
    <relationshipName>Availability_Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>