ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Availability_Inventory__c/fields/Parent_Sku__c.field-meta.xml
<CustomField>
    <fullName>Parent_Sku__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Sku</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Availability_Inventory (Parent Sku)</relationshipLabel>
    <relationshipName>Availability_Inventory_ParentSku</relationshipName>
    <type>Lookup</type>
</CustomField>