ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Availability_Inventory__c/fields/Repack_Code__c.field-meta.xml
<CustomField>
    <fullName>Repack_Code__c</fullName>
    <label>Repack Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BKO</fullName>
            </value>
            <value>
                <fullName>CNR</fullName>
            </value>
            <value>
                <fullName>KIT</fullName>
            </value>
            <value>
                <fullName>MTA</fullName>
            </value>
            <value>
                <fullName>NYC</fullName>
            </value>
            <value>
                <fullName>RPN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>