ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Availability_Inventory__c/fields/Total_Quantity_Per_SKU__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity_Per_SKU__c</fullName>
    <label>Total Quantity Per SKU</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>